fix(css): added supports for the text wrap balance inside the globals.css

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,8 @@ body {
 
 @layer utilities {
   .text-balance {
-    text-wrap: balance;
+    @supports (text-wrap: balance) {
+      text-wrap: balance;
+    }
   }
 }
